--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,10 +19,10 @@
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
 
-    --muted: 240 4.8% 95.9%;
+    --muted: 240 85% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
 
-    --accent: 240 4.8% 95.9%;
+    --accent: 208 65% 95%;
     --accent-foreground: 240 5.9% 10%;
 
     --destructive: 0 84.2% 60.2%;
@@ -83,6 +83,21 @@
   }
 }
 
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+
+  .styled-scrollbar::-webkit-scrollbar {
+    height: 3px;
+    width: 3px;
+  }
+  .styled-scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #dedede;
+  }
+}
+
 @layer components {
   .auth-bg {
     background-image: url('/assets/graphic-element.svg');
@@ -100,4 +115,18 @@
   .form-control .error {
     @apply mt-2 text-red-500 text-xs;
   }
+}
+
+/* Hides default eye or clear button on mircosot edge */
+input::-ms-clear,
+input::-ms-reveal {
+  display: none;
+}
+
+.dashboard-icon path {
+  fill: #909090 !important;
+}
+
+.dashboard-icon.active path {
+  fill: hsl(218, 100%, 13%) !important;
 }
